--- a/css/global.css
+++ b/css/global.css
@@ -34,7 +34,8 @@ body {
 html.lenis,
 html.lenis body {
   height: auto;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .lenis.lenis-smooth {
